[package]
name = "sbbm-asm"
version = "0.1.0"
authors = ["Christopher Chambers <chris.chambers@peanutcode.com>"]

[dependencies]
docopt = "*"
regex = "0.1.30"
regex_macros = "0.1.17"
rustc-serialize = "*"

[lib]
name = "sbbm_asm"
path = "src/lib.rs"

[[bin]]
name = "sbbm-asm"
path = "src/main.rs"
test = false